Added security config

--- a/.env-example
+++ b/.env-example
@@ -1,9 +1,18 @@
 ## mandatory
 
 # database
-DATABASE_URL=jdbc:postgresql://localhost:5432/corems
-DATABASE_USER=admin
-DATABASE_PASSWORD=admin
+DATABASE_URL=jdbc:postgresql://localhost:5432/translation_ms
+DATABASE_USER=postgres
+DATABASE_PASSWORD=postgres
 
-# authentication
-AUTH_TOKEN_SECRET=
+# JWT symmetric key (for local development)
+AUTH_TOKEN_SECRET=your-secret-key-here-min-256-bits
+
+# service port
+TRANSLATION-SERVICE-PORT=3003
+
+## optional
+
+# JWT RSA Keys (for production - generate with: openssl genrsa -out private.pem 2048 && openssl rsa -in private.pem -pubout -out public.pem)
+# JWT_PRIVATE_KEY=
+# JWT_PUBLIC_KEY=
