--- a/translation-service/src/main/resources/application.yaml
+++ b/translation-service/src/main/resources/application.yaml
@@ -9,4 +9,4 @@ spring:
   jackson:
     default-property-inclusion: non_null
   config:
-    import: classpath:db-config.yaml
+    import: classpath:db-config.yaml, security-config.yaml
